2009-10-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Bottle.cpp: give user a way to tag Bottles
	as modified externally (so serialization can happen correctly).

	* src/libYARP_OS/harness/BottleTest.cpp: add regression test
	for Value assignment operator.

	* src/libYARP_OS/src/Value.cpp: make Value assignment operator
	work as expected (thanks Philipp Robbel).

2009-10-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameClient.cpp: remove dependency on
	"localhost" being correctly set - this leads to hard to debug
	problems if it is not set.  You still need the loopback device 
	though (thanks Andrew Stout, Baris Akgun for 64-bit Ubuntu
	9.04 reports).

2009-10-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpModuleHooks.cmake: fix bug introduced while 
	"cleaning" up this code; a wrapper was added for 
	the TARGET_LINK_LIBRARIES method, but an internal use of 
	this method got caught where it should not have.

2009-10-10  Arjan Gijsberts  <arjan@liralab.it>
	* examples/swig/CMakeLists.txt: enabled threads directive and 
	added installation support for Python wrapper 

2009-10-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpModuleHooks.cmake: simplifying and documenting
	the YARP device compilation process

	* example/swig/yarp.i: make callback support via directors
	apply to all wrappers, not just python wrappers

2009-10-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add findPath
	method for finding directories.

2009-09-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/SubscriberOnSql.cpp: define F_OK if needed
	(thanks Philipp Robbel)
	
	* src/yarpserver/src/TripleSourceCreator.cpp: define F_OK if needed
	(thanks Philipp Robbel)

	* src/yarpserver/sqlite/sqlite3.c: move variable declaration
	where strict C compilation is happy (thanks Philipp Robbel)

2009-09-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
